Calculate Mass does not calculate actual volume #41019

Closed
opened 2014-07-10 17:24:05 +02:00 by Ante Vukorepa · 6 comments

System Information
Windows 8.1 Pro x64

Blender Version
Broken: 2.71
Worked: unknown

Short description of error
Calculate Mass option does not calculate the true volume of an object. In fact, it does not even calculate anything approximating a true volume.
What it actually calculates is the volume of the object's bounding box and the bounding box' mass ("It's a faaaaaake!"). Fairly useless for a lot of cases.

Exact steps for others to reproduce the error

  1. Create a non-cuboid object and a cube.
  2. Resize the cube to dimensions of the non-cuboid object.
  3. Make each a rigid body.
  4. Calculate mass of both and compare.

Example scene: mass_calculation.blend

**System Information** Windows 8.1 Pro x64 **Blender Version** Broken: 2.71 Worked: unknown **Short description of error** Calculate Mass option does not calculate the true volume of an object. In fact, it does not even calculate anything approximating a true volume. What it actually calculates is the volume of the object's bounding box and the bounding box' mass ("It's a faaaaaake!"). Fairly useless for a lot of cases. **Exact steps for others to reproduce the error** 1. Create a non-cuboid object and a cube. 2. Resize the cube to dimensions of the non-cuboid object. 3. Make each a rigid body. 4. Calculate mass of both and compare. Example scene: [mass_calculation.blend](https://archive.blender.org/developer/F97331/mass_calculation.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @orcinus

Added subscriber: @orcinus
Lukas Tönne self-assigned this 2014-07-11 09:43:18 +02:00

This issue was referenced by 4633e655dc

This issue was referenced by 4633e655dc59b68d622e3319102d5050245a22eb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 4633e655dc.

Closed by commit 4633e655dc.

This issue was referenced by d983908f5a326f0a30a35d6acc2a804471cc88cd

This issue was referenced by d983908f5a326f0a30a35d6acc2a804471cc88cd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41019
No description provided.